...
                      },
                      icon: const Icon(Icons.arrow_back_ios, color: Colors.white, size: 30),
                    ),
                    const Align(
                      alignment: Alignment.center,
                      child: Text(
                        'Payment Options',
                        style: TextStyle(
                          color: Colors.tealAccent,
                          fontSize: 18,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
...
